<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musiccloudplayer.Equalizer">

    <!--Top buttons panel-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/buttonsColor"
        android:orientation="horizontal">

        <!--Button menu-->
        <ImageButton
            android:id="@+id/imageButtonMenu"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/manemenu" />

        <!--Button ButtonOnRingtone-->
        <ImageButton
            android:id="@+id/imageButtonOnRingtone"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/ic_ring_volume_white_24dp" />

        <!--Button share-->
        <ImageButton
            android:id="@+id/imageButtonShare"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/ic_share_white_24dp" />
        <!--Button clouds-->
        <ImageButton
            android:id="@+id/imageButtonClouds"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/ic_cloud_queue_white_24dp" />


    </LinearLayout>

    <!--Equalizer field-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@drawable/w6"
        android:orientation="vertical">



        <!--Description for equalizer -->
        <TextView
            android:id="@+id/descriptionEqualizer"
            style="@style/DescriptionStyle"
            android:background="@color/backgroundForDescription"
            android:text="@string/description_for_equalizer"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/AuthorName" />

        <!--Presets panel-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--Presets txt-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:paddingLeft="14dp"
                android:text="@string/presets_txt"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/SongName" />
            <!--Switch key-->
            <Switch
                android:id="@+id/switch1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:checked="true"
                android:gravity="center_vertical|right"
                android:paddingRight="14dp"
                android:text="@string/equalizer_on_off_txt"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/SongName" />

        </LinearLayout>

        <!--Equalizer vertical bars-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">


            <!--Equalizer line1-->
             <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <!-- This library requires pair of the VerticalSeekBar and VerticalSeekBarWrapper classes -->
                <!--MANUAL https://android-arsenal.com/details/1/1436-->
                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                        android:id="@+id/equalizerOne"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:progress="70"
                        android:splitTrack="false"
                        app:seekBarRotation="CW270" /> <!-- Rotation: CW90 or CW270 -->
                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>

            </LinearLayout>

            <!--Equalizer line2-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <!-- This library requires pair of the VerticalSeekBar and VerticalSeekBarWrapper classes -->
                <!--MANUAL https://android-arsenal.com/details/1/1436-->
                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                        android:id="@+id/equalizerTwo"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:progress="50"
                        android:splitTrack="false"
                        app:seekBarRotation="CW270" /> <!-- Rotation: CW90 or CW270 -->
                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
            </LinearLayout>

            <!--Equalizer line3-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <!-- This library requires pair of the VerticalSeekBar and VerticalSeekBarWrapper classes -->
                <!--MANUAL https://android-arsenal.com/details/1/1436-->
                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                        android:id="@+id/equalizerThree"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:progress="50"
                        android:splitTrack="false"
                        app:seekBarRotation="CW270" /> <!-- Rotation: CW90 or CW270 -->
                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
            </LinearLayout>

            <!--Equalizer line4-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <!-- This library requires pair of the VerticalSeekBar and VerticalSeekBarWrapper classes -->
                <!--MANUAL https://android-arsenal.com/details/1/1436-->
                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                    android:id="@+id/equalizerFor"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:progress="70"
                    android:splitTrack="false"
                    app:seekBarRotation="CW270" /> <!-- Rotation: CW90 or CW270 -->
                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
            </LinearLayout>

            <!--Equalizer line5-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <!-- This library requires pair of the VerticalSeekBar and VerticalSeekBarWrapper classes -->
                <!--MANUAL https://android-arsenal.com/details/1/1436-->
                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                    android:id="@+id/equalizerFive"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:progress="80"
                    android:splitTrack="false"
                    app:seekBarRotation="CW270" /> <!-- Rotation: CW90 or CW270 -->
                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
            </LinearLayout>

        </LinearLayout>

            <!--Presets style field-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <!--Presets style txt-->
            <TextView
                android:id="@+id/textView2"
                style="@style/SongName"
                android:text="Rock"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/SongName"/>
        </LinearLayout>

    </LinearLayout>

    <!--Bottom buttons panel-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <!--Button player-->
        <ImageButton
            android:id="@+id/imageButtonPlayer"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/ic_play_circle_outline_white_24dp" />

        <!--Button play list-->
        <ImageButton
            android:id="@+id/imageButtonPlayList"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/ic_playlist_play_white_24dp" />
        <!--Button equalizer-->
        <ImageButton
            android:id="@+id/imageButtonEqualizer"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/equalizer3" />

        <!--Button rescan-->
        <ImageButton
            android:id="@+id/imageButtonRescan"
            style="@style/ButtonsTopAndDown"
            android:layout_weight="1"
            android:background="@color/buttonsColor"
            app:srcCompat="@drawable/ic_sync_white_24dp" />

    </LinearLayout>

</LinearLayout>
